add mir3g 19.07 & stop x86-snapshot build

--- a/.github/workflows/openwrt_official.yml
+++ b/.github/workflows/openwrt_official.yml
@@ -46,8 +46,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        model: [x86]
-        version: [snapshot]
+        model: [mir3g]
+        version: [19.07]
 
     steps:
       - name: Checkout
