--- a/.github/workflows/padavan.yml
+++ b/.github/workflows/padavan.yml
@@ -6,7 +6,7 @@ on:
       - master
     paths:
       - '.github/workflows/padavan.yml'
-      - 'padavan/*.sh'
+      - 'padavan/**'
   schedule:
     - cron: 0 16 * * 5
 
