--- a/.github/workflows/padavan.yml
+++ b/.github/workflows/padavan.yml
@@ -14,8 +14,38 @@ env:
   MODELS: "MI-R3G MI-MINI"
 
 jobs:
+  release:
+    runs-on: ubuntu-18.04
+    if: github.event.repository.owner.id == github.event.sender.id
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    steps:
+      - name: Set Date
+        run: |
+          date=$(date +%Y-%m-%d)
+          echo "::set-env name=DATE::$date"
+      
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: padavan_${{ env.DATE }}
+          release_name: Padavan-${{ env.DATE }}
+          draft: false
+          prerelease: false
+
   build:
     runs-on: ubuntu-18.04
+    needs: release
+    if: github.event.repository.owner.id == github.event.sender.id
+
+    name: ${{matrix.model}}
+    strategy:
+      fail-fast: false
+      matrix:
+        model: [MI-R3G, MI-MINI]
 
     steps:
       - name: Checkout
@@ -46,32 +76,17 @@ jobs:
           git apply $p
           done
           popd
-          for m in $MODELS; do
-          ./padavan/common.sh $m
-          ./padavan/apps.sh $m
+          ./padavan/common.sh ${{matrix.model}}
+          ./padavan/apps.sh ${{matrix.model}}
           pushd /opt/rt-n56u/trunk
           sudo ./clear_tree
-          sudo ./build_firmware_modify $m 0
+          sudo ./build_firmware_modify ${{matrix.model}} 0
           sudo mv -f images/*.trx /opt/images/
           popd
-          done
-          echo "::set-output name=status::success"
-          echo "::set-env name=BUILD_DATE::$(date +"%y%m%d.%H%M")"
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.BUILD_DATE }}
-          release_name: Padavan_${{ env.BUILD_DATE }}
-          draft: false
-          prerelease: false
 
       - name: Upload Release Assets
         uses: csexton/release-asset-action@v2
         with:
           pattern: "/opt/images/*"
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          release-url: ${{ steps.create_release.outputs.upload_url }}
+          release-url: ${{ needs.release.outputs.upload_url }}
