--- a/.github/workflows/openwrt_official.yml
+++ b/.github/workflows/openwrt_official.yml
@@ -9,10 +9,10 @@ on:
     paths:
       - '.github/workflows/openwrt_official.yml'
       - 'openwrt-official/**'
-  schedule:
-    - cron: 0 16 * * 5
-  watch:
-    types: [started]
+  # schedule:
+  #   - cron: 0 16 * * 5
+  # watch:
+  #   types: [started]
 
 jobs:
   release:
